# fastaextract

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
docs/: Makefile.am  Makefile.in  faalphabetfilter.1  faalphabetfilter.pod  faalphabetsort.1  faalphabetsort.pod  fasizefilter.1  fasizefilter.pod  fasizesort.1  fasizesort.pod  fastaextract.1  fastaextract.pod
src/: Makefile.am  Makefile.in  faalphabetfilter.c  faextract.c  fasizefilter.c
tests/: Makefile.am  Makefile.in  alphabet.sh  exclude.err  exclude.out  exclude.sh  extract.err  extract.out  extract.sh  faalphabetfilter.sh  faextract.sh  fasizefilter.sh  full_len_exclude.err  fullexclude.err  fullextract.err  lenfilter.err  lenfilter.sh  test.fa  xlenfilter.out
