DATAS = test.fa id_list.txt full_id.txt

TESTS = faextract.sh extract.sh exclude.sh \
        fasizefilter.sh lenfilter.sh \
	faalphabetfilter.sh alphabet.sh
OUT = extract.out fullexclude.out exclude.out lenfilter.out xlenfilter.out
ERR = extract.err fullextract.err exclude.err fullexclude.err \
      full_len_exclude.err lenfilter.err xlenfilter.err

EXTRA_DIST = $(DATAS) $(TESTS) $(OUT) $(ERR)

CLEANFILES = tmp.*

